Fix issue with spacing of Skills flex items/container

--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,6 +1,7 @@
 .Skills-container {
   display: flex;
   flex-wrap: wrap;
+  margin-top: -0.75rem;
 }
 
 .Skills-bubble {
@@ -9,5 +10,5 @@
   padding: 0.5rem 0.75rem;
   border-radius: 6px;
   margin-right: 1rem;
-  margin-bottom: 0.75rem;
+  margin-top: 0.75rem;
 }
